# minecraft-modpack-maker

./: .gitignore  .parcelrc  CMakeLists.txt  package-lock.json  package.json
backend/include/backend/: executeable_path.hpp  fabric.hpp  fetch.hpp  fetch_options.hpp  filesystem.hpp  minecraft_launcher.hpp  modpack.hpp  tar_extractor_sink.hpp
backend/include/backend/archive/: archive.hpp  entry.hpp  error.hpp  reader.hpp  streaming_provider.hpp  writer.hpp
backend/source/backend/: CMakeLists.txt  executeable_path_nix.cpp  main.cpp
backend/src/backend/: CMakeLists.txt  executeable_path_win.cpp  fabric.cpp  fetch.cpp  filesystem.cpp  main.cpp  minecraft_launcher.cpp  modpack.cpp  tar_extractor_sink.cpp
backend/src/backend/archive/: error.cpp  reader.cpp  writer.cpp
cmake/: common_options.cmake
cmake/dependencies/: ftxui.cmake  libarchive.cmake  roar.cmake
frontend/: frontend.cpp  module.js  page_model.hpp
frontend/components/: labeled_select.hpp  labeled_text_input.hpp
frontend/include/frontend/: config.hpp  main_page.hpp  modpack.hpp  page_model.hpp
frontend/include/frontend/api/: fetch.hpp  http.hpp  minecraft.hpp  modrinth.hpp
frontend/include/frontend/components/: labeled_select.hpp  labeled_text_input.hpp  mod_picker.hpp
frontend/src/frontend/: CMakeLists.txt  config.cpp  frontend.cpp  main.cpp  main_page.cpp  modpack.cpp
frontend/src/frontend/api/: fetch.cpp  http.cpp  minecraft.cpp  modrinth.cpp
frontend/src/frontend/components/: mod_picker.cpp
frontend/src/frontend/js/: module.js
scripts/: build.sh  copy_compile_commands.mjs  remake.sh  remake_ui.sh
static/: index.html
static/source/: bla.js  utility.js
static/styles/: mod_picker.scss  mod_table.scss  pack_controls.scss  page.css  page.scss  variables.scss
update_client/src/update_client/: CMakeLists.txt  base_path.hpp  config.cpp  config.hpp  main.cpp  update_client.cpp  update_client.hpp
update_server/include/update_server/: minecraft.hpp  sha256.hpp  temp_file.hpp  update_provider.hpp
update_server/src/update_server/: CMakeLists.txt  main.cpp  minecraft.cpp  update_provider.cpp
